# chrono-lullaby

./: .gitignore  CHANGELOG_LOG_SYSTEM.md  GLOBAL_COMMANDS.md  PREMIERE_VIDEO_HANDLING.md  ch-cleanup.ps1  ch-logs.ps1  ch-status.ps1  ch-stop.ps1  ch.ps1  config.yaml  environment.yml  expenv.ps1  expenv.sh  logs.ps1  noneed  pyproject.toml  readme.md  requirements.txt  start-simple.ps1  start.ps1  status.ps1  stop.ps1  tail-logs.ps1  troubleshoot_chatid.md  如何让Bot在频道工作.md  运行指南.md  频道组开关使用说明.txt
config/: config.local.example.yaml  config.notion.example.yaml  config.yaml.example  config_exported.yaml  youtube copy.cookies
doc/: MULTI_BOT_MODES.md  QUICK_REFERENCE.md
docs/: ARCHIVE_FILES.md  CHANGELOG_CHATID_COMMAND.md  CHANGELOG_SENT_ARCHIVE.md  CHATID_COMMAND.md  CONFIG_GUIDE.md  COOKIE_UPDATE_GUIDE.md  FILENAME_FORMAT_FIX.md  FILENAME_RULE_UPDATE.md  HOT_RELOAD_CONFIG.md  LOG_EXAMPLES.md  LOG_POINTS.md  NOTION_LOG_CLEANUP.md  NOTION_LOG_CLEANUP_QUICKREF.md  NOTION_SETUP.md  PYTHON_ENV_FIXED.md  QUICK_LOG_REFERENCE.md  QUICK_REFERENCE.md  README.md  SYSTEM_LOG.md  TEST_CHATID_COMMAND.md  TROUBLESHOOTING.md  YAML_CONFIG_UPDATE.md  YOUTUBE_CHANNELS_MULTISELECT.md
scripts/: auto-clean-logs.ps1  ch-cleanup.ps1  ch-logs-viewer.ps1  ch-logs.ps1  ch-status.ps1  ch-stop.ps1  ch-test-data-dir.ps1  ch.ps1  convert_cookies.py  export_notion_config.py  extract_cookies_manual.ps1  extract_cookies_simple.ps1  get_channel_id.py  get_channel_id_simple.py  view_logs.py  view_sent_records.ps1
src/: __init__.py  config.py  config_provider.py  launcher.py  logger.py  main.py  notion_adapter.py  notion_sync.py  telegram_bot.py  util.py  yt.py  yt_dlp_downloader.py
src/commands/: add_channel.py  clean_notion_logs.py  init_notion.py  migrate_youtube_channels_to_multiselect.py  sync_to_notion.py  update_notion_schema.py
src/data/: last_log_cleanup.json
src/task/: dl_audio.py  send_file.py
