[project]
name = "chronolullaby"
version = "0.1.0"
description = "A bot to download and send YouTube audio files via Telegram"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "yt-dlp>=2025.10.22",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot[job-queue]>=22.0",
    "browser-cookie3>=0.19.1",
    "PyYAML>=6.0",
    "notion-client>=2.2.1",
    "yt-dlp-ejs>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "uv>=0.9.26",
]
